--- a/PinkPongKiosk/app/src/main/res/layout/activity_single_fragment.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/activity_single_fragment.xml
@@ -3,19 +3,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
+             android:id="@+id/activity_single_fragment_fragment_container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:layout_marginLeft="100dp"
-             android:layout_marginRight="100dp"
-             android:layout_marginTop="50dp"
-             android:layout_marginBottom="50dp">
+             android:background="@color/material_blue_grey_800">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/activity_single_fragment_fragment_container"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        card_view:cardCornerRadius="4dp" />
+
 
 </FrameLayout>
 
