--- a/PinkPongKiosk/app/src/main/res/layout/fragment_match_list.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/fragment_match_list.xml
@@ -1,5 +1,20 @@
-<android.support.v7.widget.RecyclerView
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_match_list_recycler_view"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:layout_marginBottom="50dp"
+    android:layout_marginLeft="100dp"
+    android:layout_marginRight="100dp"
+    android:layout_marginTop="50dp"
+    card_view:cardCornerRadius="0dp">
+
+
+<android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_match_list_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</android.support.v7.widget.CardView>
