--- a/PinkPongKiosk/app/src/main/res/layout/fragment_paddle_registration.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/fragment_paddle_registration.xml
@@ -1,28 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
 
-    <TextView
-    android:id="@+id/fragment_paddle_reg_name_text_view"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="100dp"
+    android:layout_marginRight="100dp"
+    android:layout_marginTop="50dp"
+    android:layout_marginBottom="50dp"
     android:layout_gravity="center"
-    android:textSize="30dp"
-    />
+    card_view:cardCornerRadius="0dp">
 
-    <ImageView
-        android:id="@+id/fragment_paddle_reg_image_view"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/paddle_transition"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/fragment_paddle_reg_prompt_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="30dp"
-        />
-</LinearLayout>
+        <TextView
+            android:id="@+id/fragment_paddle_reg_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="30dp"
+            />
+
+        <ImageView
+            android:id="@+id/fragment_paddle_reg_image_view"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/paddle_transition"/>
+
+        <TextView
+            android:id="@+id/fragment_paddle_reg_prompt_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="30dp"
+            />
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
