--- a/PinkPongKiosk/app/src/main/res/layout/fragment_score.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/fragment_score.xml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/fragment_score_a_text_view"
-        android:layout_weight="1"
-        android:layout_width="0dp"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="100dp"
+    android:layout_marginRight="100dp"
+    android:layout_marginTop="50dp"
+    android:layout_marginBottom="50dp"
+    android:layout_gravity="center"
+    card_view:cardCornerRadius="0dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        tools:text="42"
-        android:textSize="50sp"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/fragment_score_b_text_view"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        tools:text="99"
-        android:textSize="50sp" />
+        <TextView
+            android:id="@+id/fragment_score_a_text_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="50sp"
+            tools:text="42"/>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/fragment_score_b_text_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="50sp"
+            tools:text="99"/>
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
