--- a/PinkPongKiosk/app/src/main/res/layout/activity_single_fragment.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/activity_single_fragment.xml
@@ -5,8 +5,7 @@
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_single_fragment_fragment_container"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="@color/material_blue_grey_800">
+             android:layout_height="match_parent">
 
 
 
