--- a/PinkPongKiosk/app/src/main/res/layout/fragment_match_list.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/fragment_match_list.xml
@@ -2,19 +2,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="800dp"
+    android:layout_height="600dp"
     android:layout_gravity="center"
-    android:layout_marginBottom="50dp"
-    android:layout_marginLeft="100dp"
-    android:layout_marginRight="100dp"
-    android:layout_marginTop="50dp"
-    card_view:cardCornerRadius="0dp">
+    card_view:cardUseCompatPadding="true"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp">
 
 
 <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_match_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"/>
 
 </android.support.v7.widget.CardView>
+
+    <!--android:layout_marginBottom="50dp"
+    android:layout_marginLeft="150dp"
+    android:layout_marginRight="150dp"
+    android:layout_marginTop="50dp" -->
