--- a/PinkPongKiosk/app/src/main/res/layout/match_list_item.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/match_list_item.xml
@@ -5,8 +5,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="100dp"
-              android:layout_margin="10dp">
+              android:layout_height="120dp" >
 
     <TextView
         android:id="@+id/match_list_item_time"
@@ -15,6 +14,7 @@
         tools:text="1:00pm"
         android:text="1:00pm"
         android:textSize="16dp"
+        android:textColor="@color/blue"
         android:layout_gravity="left|center"
         android:gravity="center"/>
 
@@ -26,8 +26,8 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:src="@drawable/placeholder_avatar"
-        app:border_width="2dp"
-        app:border_color="#FF000000"
+        app:border_width="1dp"
+        app:border_color="@color/neutral"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"/>
 
@@ -44,7 +44,8 @@
             android:layout_height="wrap_content"
             tools:text="Bob Evans"
             android:text="Bob Evans"
-            android:textSize="20dp"
+            android:textSize="18dp"
+            android:textColor="@color/dark"
             android:padding="5dp"
             />
 
@@ -55,6 +56,7 @@
             tools:text="10-1"
             android:text="10-1"
             android:textSize="14dp"
+            android:textColor="@color/neutral"
             android:padding="5dp"/>
 
     </LinearLayout>
@@ -69,8 +71,8 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:src="@drawable/placeholder_avatar"
-        app:border_width="2dp"
-        app:border_color="#FF000000"
+        app:border_width="1dp"
+        app:border_color="@color/neutral"
         android:layout_gravity="center"
         android:layout_marginLeft="20dp"/>
 
@@ -87,7 +89,8 @@
             android:layout_height="wrap_content"
             tools:text="Bob Evans"
             android:text="Bob Evans"
-            android:textSize="20dp"
+            android:textSize="18dp"
+            android:textColor="@color/dark"
             android:padding="5dp"
             />
 
@@ -98,18 +101,22 @@
             tools:text="10-1"
             android:text="10-1"
             android:textSize="14dp"
+            android:textColor="@color/neutral"
             android:padding="5dp"/>
 
     </LinearLayout>
 
     <Button
         android:id="@+id/match_list_item_button"
-        android:layout_width="140dp"
-        android:layout_height="50dp"
+        android:layout_width="120dp"
+        android:layout_height="36dp"
         tools:text="Start Match"
         android:text="Start Match"
         android:textAllCaps="true"
-        android:textSize="16dp"
-        android:layout_gravity="right|center" />
+        android:textSize="14dp"
+        android:layout_gravity="right|center"
+        android:background="@color/green"
+        android:textColor="@android:color/white"
+        android:elevation="10dp"/>
 
 </LinearLayout>
