--- a/PinkPongKiosk/app/src/main/res/layout/activity_single_fragment.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/activity_single_fragment.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_single_fragment_fragment_container"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             android:background="@android:color/white">
 
 
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                                       xmlns:app="http://schemas.android.com/apk/res-auto"
+                                       android:id="@+id/actionBar"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="250dp"
+
+                                       android:background="@color/dark"
+
+                                       android:gravity="top|left"
+
+
+
+        >
+    </android.support.v7.widget.Toolbar>
 
 </FrameLayout>
 
