--- a/PinkPongKiosk/app/src/main/res/layout/fragment_match_list.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/fragment_match_list.xml
@@ -7,7 +7,8 @@
     android:layout_gravity="center"
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="2dp"
-    card_view:cardElevation="2dp">
+    card_view:cardElevation="2dp"
+    card_view:cardBackgroundColor="@android:color/white" >
 
 
 <android.support.v7.widget.RecyclerView
