--- a/PinkPongKiosk/app/src/main/res/layout/fragment_paddle_registration.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/fragment_paddle_registration.xml
@@ -4,14 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="100dp"
-    android:layout_marginRight="100dp"
-    android:layout_marginTop="50dp"
-    android:layout_marginBottom="50dp"
+    android:layout_width="800dp"
+    android:layout_height="600dp"
     android:layout_gravity="center"
-    card_view:cardCornerRadius="0dp">
+    card_view:cardUseCompatPadding="true"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp"
+    card_view:cardBackgroundColor="@android:color/white" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +29,7 @@
             android:id="@+id/fragment_paddle_reg_image_view"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_gravity="center"
             android:background="@drawable/paddle_transition"/>
 
         <TextView
