toolbar shows correct titles

--- a/PinkPongKiosk/app/src/main/res/layout/activity_single_fragment.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/activity_single_fragment.xml
@@ -17,8 +17,10 @@
                                        android:layout_height="250dp"
 
                                        android:background="@color/dark"
-
+                                       app:contentInsetEnd="10dp"
+                                       app:contentInsetStart="10dp"
                                        android:gravity="top|left"
+
 
 
 
