--- a/PinkPongKiosk/app/src/main/res/layout/fragment_score.xml
+++ b/PinkPongKiosk/app/src/main/res/layout/fragment_score.xml
@@ -7,33 +7,153 @@
     android:layout_width="800dp"
     android:layout_height="600dp"
     android:layout_gravity="center"
-    card_view:cardUseCompatPadding="true"
+    card_view:cardBackgroundColor="@android:color/white"
     card_view:cardCornerRadius="2dp"
     card_view:cardElevation="2dp"
-    card_view:cardBackgroundColor="@android:color/white" >
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_marginTop="30dp">
 
-        <TextView
-            android:id="@+id/fragment_score_a_text_view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="50sp"
-            tools:text="42"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="480dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/fragment_score_b_text_view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="50sp"
-            tools:text="99"/>
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/fragment_score_avatar1"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/placeholder_avatar"
+                    app:border_color="@color/neutral"
+                    app:border_width="1dp"
+                    />
+
+                <TextView
+                    android:id="@+id/fragment_score_a_name_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="20dp"
+                    android:textColor="@color/dark"
+                    android:textSize="32sp"
+                    tools:text="Bob Evans"/>
+
+                <View
+                    android:layout_width="360dp"
+                    android:layout_height="2dp"
+                    android:layout_gravity="right"
+                    android:background="@color/neutral"/>
+
+                <TextView
+                    android:id="@+id/fragment_score_a_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/dark"
+                    android:textSize="68sp"
+                    tools:text="42"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="80dp"/>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="2dp"
+                android:layout_height="350dp"
+                android:layout_gravity="bottom"
+                android:background="@color/neutral"
+                android:layout_marginBottom="30dp"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/fragment_score_avatar2"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/placeholder_avatar"
+                    app:border_color="@color/neutral"
+                    app:border_width="1dp"
+                    />
+
+                <TextView
+                    android:id="@+id/fragment_score_b_name_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="20dp"
+                    android:textColor="@color/dark"
+                    android:textSize="32sp"
+                    tools:text="Sue McDonald"/>
+
+                <View
+                    android:layout_width="360dp"
+                    android:layout_height="2dp"
+                    android:layout_gravity="left"
+                    android:background="@color/neutral"/>
+
+                <TextView
+                    android:id="@+id/fragment_score_b_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/dark"
+                    android:textSize="68sp"
+                    tools:text="15"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="80dp"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="0dp">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/neutral"
+                android:text="DRAW"
+                android:textSize="30dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_marginRight="30dp"
+                />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/green"
+                android:text="FINISH"
+                android:textSize="30dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_marginRight="50dp"/>
+
+        </LinearLayout>
+        
     </LinearLayout>
 </android.support.v7.widget.CardView>
